--- a/openHABIntents/openHABIntents.entitlements
+++ b/openHABIntents/openHABIntents.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.es.spaphone.openhab</string>
+		<string>group.eu.codehawks.openhab</string>
 	</array>
 </dict>
 </plist>
