--- a/openHABWatch Extension/openHABWatch Extension/Info.plist
+++ b/openHABWatch Extension/openHABWatch Extension/Info.plist
@@ -46,7 +46,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>es.spaphone.openhab.watchkitapp</string>
+			<string>eu.codehawks.openhab.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
