--- a/openHABWatch/Info.plist
+++ b/openHABWatch/Info.plist
@@ -35,6 +35,6 @@
 	<key>WKApplication</key>
 	<true/>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>es.spaphone.openhab</string>
+	<string>eu.codehawks.openhab</string>
 </dict>
 </plist>
